--- a/css/producter.css
+++ b/css/producter.css
@@ -1,5 +1,9 @@
 h1{
     text-align: center;
     color: white;
-    background-image:url(/imgs/IMG_4399-kopi.JPG)
+}
+.h1bilde{
+    background-image:url(/imgs/IMG_4399-kopi.JPG);
+    background-color:#F5EDE5;
+
 }
