--- a/css/producter.css
+++ b/css/producter.css
@@ -3,7 +3,15 @@ h1{
     color: white;
 }
 .h1bilde{
-    background-image:url(/imgs/IMG_4399-kopi.JPG);
+    background-image:url(/imgs/coverprodukter.webp);
     background-color:#F5EDE5;
-
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
 }
