--- a/css/producter.css
+++ b/css/producter.css
@@ -1,27 +1,27 @@
-h1{
-    text-align: center;
-    color: white;
-    font-family: montserratitalic;
-    font-size: 5em;
+h1 {
+  text-align: center;
+  color: white;
+  font-family: montserratitalic;
+  font-size: 5em;
 }
-.h1bilde{
-    background-image:url(/imgs/coverprodukter.webp);
-    background-color:#F5EDE5;
-    background-size: cover;
-    height: 100vh;
-    width: 100%;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; 
+.h1bilde {
+  background-image: url(/imgs/coverprodukter.webp);
+  background-color: #f5ede5;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
-.skaalcontainer{
-    display: grid;
-    grid-template-rows: 2fr 1fr 1fr;
+.skaalcontainer {
+  display: grid;
+  grid-template-rows: 2fr 1fr 1fr;
 }
-.overst{
-    padding:5em;
-    line-height: 1.5em;
+.overst {
+  padding: 5em;
+  line-height: 1.5em;
 }
