--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,61 @@
-header{
-    background-color: #F5EDE5;
+header {
+  background-color: #f5ede5;
 }
 
-body{
-    background-color: #F5EDE5;
+body {
+  background-color: #f5ede5;
+  /* max-width: 1200px; */
+  justify-content: center;
 }
 
-footer{
-    background-color: #473335;
-    color: #F5EDE5;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+footer {
+  background-color: #473335;
+  color: #f5ede5;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
-.headerlogo{
-    aspect-ratio: 108/37;
-    max-width: .5em;
-    /* DETTE FUNGERER IKKE */
-
+.headerlogo {
+  aspect-ratio: 108/37;
+  max-width: 0.5em;
+  /* DETTE FUNGERER IKKE */
 }
-.headerul{
-    padding-bottom: 5em;
-    padding-right: 5em;
+.headerul {
+  padding-bottom: 5em;
+  padding-right: 5em;
 }
-a:link{
-    color: black;
-    text-decoration: none;
+a:link {
+  color: black;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: none; 
-    color: #473335;
-    font-weight: bold;
+  text-decoration: none;
+  color: #473335;
+  font-weight: bold;
 }
 a:visited {
-    text-decoration: none; 
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 a:active {
-    text-decoration: none; 
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 @font-face {
-    font-family: montserrat;
-    src: url(/fonts/montserrat-variablefont_wght-webfont.woff2);
+  font-family: montserrat;
+  src: url(/fonts/montserrat-variablefont_wght-webfont.woff2);
 }
 @font-face {
-    font-family: montserratitalic;
-    src: url(/fonts/montserrat-italic-variablefont_wght-webfont.woff2);
+  font-family: montserratitalic;
+  src: url(/fonts/montserrat-italic-variablefont_wght-webfont.woff2);
 }
 @font-face {
-    font-family: lora;
-    src: url(/fonts/lora-variablefont_wght-webfont.woff2);
+  font-family: lora;
+  src: url(/fonts/lora-variablefont_wght-webfont.woff2);
 }
 @font-face {
-    font-family: loraitalic;
-    src: url(/fonts/lora-italic-variablefont_wght-webfont.woff2);
+  font-family: loraitalic;
+  src: url(/fonts/lora-italic-variablefont_wght-webfont.woff2);
 }
