--- a/css/projecter.css
+++ b/css/projecter.css
@@ -33,14 +33,14 @@ body {
   width: 30%;
   flex-shrink: 0;
   background-color: blue;
-  grid-columns: -1;
+  grid-column: -1;
 }
 .item_2 {
   /* width: 50.0625rem;
   height: 40.6875rem; */
   width: 70%;
   background: #dcd2c9;
-  grid-columns: 2;
+  grid-column: 2;
 }
 
 /* style */
