--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,24 @@
-footer{
+footer {
   left: 0;
   bottom: 0;
   width: 100%;
 }
-ul{
-    display: flex;
-    justify-content: right;
-    gap: 10em;
+ul {
+  display: flex;
+  justify-content: right;
+  gap: 10em;
+}
+/* header {
+
+} */
+
+/* grid layout for index side */
+.grid_2-3 {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+}
+.grid_1-1-1-1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
