--- a/css/layout.css
+++ b/css/layout.css
@@ -15,7 +15,7 @@ ul {
 /* grid layout for index side */
 .grid_2-3 {
   display: grid;
-  grid-template-columns: 2fr 3fr;
+  grid-template-rows: 1fr 3fr;
 }
 .grid_1-1-1-1 {
   display: grid;
