--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h2 {
   font-family: lora;
 }
 p {
-  font-family: loraitalic;
+  font-family: lora;
 }
 body {
   /* background-color: #f5ede5; */
