--- a/css/producter.css
+++ b/css/producter.css
@@ -4,6 +4,9 @@ h1 {
   font-family: montserratitalic;
   font-size: 5em;
 }
+footer{
+    font-family: lora;
+}
 .h1bilde{
     background-image:url(/imgs/coverprodukter.webp);
     background-color:#F5EDE5;
