--- a/css/producter.css
+++ b/css/producter.css
@@ -8,17 +8,16 @@ footer{
     font-family: lora;
 }
 .h1bilde{
-    background-image:url(/imgs/coverprodukter.webp);
+    background-image:url(/imgs/IMG_4399.webp);
     background-color:#F5EDE5;
     background-size: cover;
-    height: 100vh;
+    height: 500px;
     width: 100%;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; 
 }
 .skaalcontainer {
   display: grid;
