--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,6 @@ a:active {
   font-family: loraitalic;
   src: url(/fonts/lora-italic-variablefont_wght-webfont.woff2);
 }
+.text2 {
+  font-family: montserrat;
+}
