--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,20 @@ footer {
 }
 
 .headerlogo {
-  aspect-ratio: 108/37;
-  max-width: 0.5em;
+  /* aspect-ratio: 108/37; */
+  width:1vw;
   /* DETTE FUNGERER IKKE */
 }
 .headerul {
-  padding-bottom: 5em;
-  padding-right: 5em;
+    font-family: lora;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+    font: 120% system-ui;
+    text-align: center;
+    padding: 2rem 1rem
 }
+
 /* Padding skal vi ligge på li item og ikke kun teksten! så er det lettere at fange linket. */
 a:link {
   color: black;
