--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ footer {
 .headerlogo {
   /* aspect-ratio: 108/37; */
   width:1vw;
-  /* DETTE FUNGERER IKKE */
+  /* DETTE FUNGERER IKKE :(*/
 }
 .headerul {
     font-family: lora;
