--- a/css/producter.css
+++ b/css/producter.css
@@ -8,7 +8,7 @@ footer {
   font-family: lora;
 }
 .h1bilde {
-  background-image: url(/imgs/coverprodukter.webp);
+  background-image: url(/imgs/IMG_4399.webp);
   background-color: #f5ede5;
   background-size: cover;
   height: 70vh;
