--- a/css/historie.css
+++ b/css/historie.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   display: flex;
   position: absolute;
+  grid-column: 1/3;
 }
 h1 {
   margin-top: 2em;
@@ -32,4 +33,15 @@ h2 {
   aspect-ratio: 1/1;
   max-width: 50%;
   max-height: 30vh;
+}
+
+.splashimgs {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.video {
+  grid-column: 1/3;
+  grid-row: 3/4;
 }
