--- a/css/projecter.css
+++ b/css/projecter.css
@@ -1,8 +1,8 @@
-/* layout */
+/* layout
 main {
   max-width: 100%;
   /* margin: 10%; */
-  font-family: montserrat;
+  /* font-family: montserrat;
   color: #111;
   justify-content: center;
   font-size: 2rem;
@@ -10,24 +10,24 @@ main {
   font-weight: 500;
   line-height: 2.5rem; /* 125% */
 }
-body {
+/* body {
   max-width: 100%;
 }
 .top {
   width: 70%;
   justify-content: center;
-  align-items: center;
+  align-items: center; */ */
   /* width: 73.25rem;
   height: 14.4375rem;
   align-items: center; */
   /* flex-shrink: 0; */
 }
 
-.grid_1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+/* .grid_1 { */
+  /* display: grid; */
+  /* grid-template-columns: 1fr 1fr;
   width: 100%;
-  padding-bottom: 3%;
+  padding-bottom: 3%; */
 }
 .item_1 {
   /* width: 41.6875rem;
@@ -132,4 +132,4 @@ body {
 }
 
 .skol05 {
-}
+} */
