--- a/css/proces.css
+++ b/css/proces.css
@@ -1,6 +1,7 @@
 h1 {
     font-family: montserratitalic;
     font-size: 5em;
+    text-align: center;
   }
   h2 {
     font-family: lora;
@@ -10,8 +11,10 @@ h1 {
     font-size: 1em;
   }
   .top{
+    text-align: center;
     font-size: 1em;
-    justify-content: center;
+    margin-left: 8em;
+    margin-bottom: 5em;
   }
   /* layout */
 main {
@@ -20,10 +23,9 @@ main {
     font-family: montserrat;
     color: #111;
     justify-content: center;
-    font-size: 2rem;
-  
+    font-size: 1.5rem;
     font-weight: 500;
-    line-height: 2.5rem; /* 125% */
+    line-height: 2rem; /* 125% */
   }
   body {
     max-width: 100%;
