--- a/css/layout.css
+++ b/css/layout.css
@@ -6,10 +6,26 @@ footer {
 ul {
   display: flex;
   justify-content: right;
-  gap: 10em;
+  gap: 9em;
 }
 /* header {
 
 } */
 
 /* grid layout for index side */
+.grid_2-3 {
+  display: grid;
+  grid-template-rows: 1fr 3fr;
+}
+.grid_1-1-1-1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+@media (min-width: 601px) {
+  .grid_2-3 {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+  }
+}
