--- a/css/index.css
+++ b/css/index.css
@@ -89,9 +89,10 @@ h5 {
   padding: 20px;
   padding-bottom: 100px;
 }
-.grid_2-3 {
+/* .grid_2-3 {
   height: 650px;
-}
+  background: var(--vena-3, #b0413e);
+} */
 /* Link på padding? */
 
 @media (min-width: 601px) {
@@ -101,5 +102,9 @@ h5 {
     margin: auto;
     padding: 20px;
     flex-shrink: 0;
+  }
+  .grid_2-3 {
+    flex-shrink: 0;
+    background: var(--vena-3, #b0413e);
   }
 }
