--- a/css/layout.css
+++ b/css/layout.css
@@ -28,4 +28,8 @@ ul {
     display: grid;
     grid-template-columns: 2fr 3fr;
   }
+  .grid_1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
