--- a/css/proces.css
+++ b/css/proces.css
@@ -149,6 +149,7 @@ main {
   }
   @media only screen and (min-width: 601px) and (max-width: 900px){
     .top{
-        margin-left: none;
+        margin-left: 0;
+        text-align: center;
       }
    }
