--- a/css/proces.css
+++ b/css/proces.css
@@ -149,7 +149,9 @@ main {
   }
   @media only screen and (min-width: 601px) and (max-width: 900px){
     .top{
-        margin-left: 0;
+        /* margin-left: 5em; */
+        margin: 0;
+        margin-right: 0;
         text-align: center;
       }
    }
