--- a/css/proces.css
+++ b/css/proces.css
@@ -149,9 +149,8 @@ main {
   }
   @media only screen and (min-width: 601px) and (max-width: 900px){
     .top{
-        /* margin-left: 5em; */
-        margin: 0;
-        margin-right: 0;
+        margin-left: 3em;
+        max-width: 100%;
         text-align: center;
       }
    }
