--- a/css/producter.css
+++ b/css/producter.css
@@ -38,36 +38,32 @@ footer {
 /* .skol05 i {
   width: 100px;
 } */
+
+.skol0 {
+  width: 50%;
+}
 .skol1 {
   width: 40%;
 }
 .skol2 {
+  width: 80%;
+}
+.skol3 {
   width: 60%;
 }
-.skol0 {
-  width: 90%;
+.skol4 {
+  width: 70%;
 }
-/* .grid_1_1_1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-.skol05 {
-  grid-column: 1 span 2;
-}
-.skol09 {
-  grid-column: 3;
-}
-.skol14 {
-  grid-column: -1;
-} */
 
 .skaalcontainer {
+  padding-left: 10%;
+  padding-right: 10%;
   display: grid;
 
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 
-  gap: 2px;
+  /* gap: 2px; */
   height: 100%;
 }
 
@@ -116,7 +112,6 @@ footer {
   grid-column-end: 9;
 }
 .skol31 {
-  background-color: #a99cfb;
   grid-row-start: 5;
   grid-column-start: 1;
 
@@ -124,7 +119,6 @@ footer {
   grid-column-end: 3;
 }
 .skol32 {
-  background-color: #cceb7d;
   grid-row-start: 5;
   grid-column-start: 3;
 
@@ -132,7 +126,6 @@ footer {
   grid-column-end: 5;
 }
 .skol33 {
-  background-color: #c88958;
   grid-row-start: 6;
   grid-column-start: 3;
 
@@ -140,7 +133,6 @@ footer {
   grid-column-end: 5;
 }
 .skol34 {
-  background-color: #dd56d5;
   grid-row-start: 5;
   grid-column-start: 5;
 
@@ -148,7 +140,6 @@ footer {
   grid-column-end: 9;
 }
 .skol35 {
-  background-color: #a958bd;
   grid-row-start: 7;
   grid-column-start: 4;
 
@@ -156,7 +147,6 @@ footer {
   grid-column-end: 7;
 }
 .skol47 {
-  background-color: #fcafdb;
   grid-row-start: 7;
   grid-column-start: 7;
 
@@ -164,15 +154,13 @@ footer {
   grid-column-end: 9;
 }
 .skol51 {
-  background-color: #f9595d;
   grid-row-start: 7;
   grid-column-start: 1;
 
-  grid-row-end: 10;
+  grid-row-end: 9;
   grid-column-end: 4;
 }
 .skol52 {
-  background-color: #c7fadd;
   grid-row-start: 9;
   grid-column-start: 4;
 
@@ -180,7 +168,6 @@ footer {
   grid-column-end: 6;
 }
 .skol52 {
-  background-color: #5db5e5;
   grid-row-start: 9;
   grid-column-start: 6;
 
@@ -188,15 +175,13 @@ footer {
   grid-column-end: 9;
 }
 .skol53 {
-  background-color: #beda99;
-  grid-row-start: 10;
+  grid-row-start: 9;
   grid-column-start: 1;
 
   grid-row-end: 11;
-  grid-column-end: 4;
+  grid-column-end: 6;
 }
 .skol57 {
-  background-color: #97af6f;
   grid-row-start: 11;
   grid-column-start: 1;
 
@@ -204,7 +189,6 @@ footer {
   grid-column-end: 3;
 }
 .skol59 {
-  background-color: #78be97;
   grid-row-start: 11;
   grid-column-start: 3;
 
@@ -212,7 +196,6 @@ footer {
   grid-column-end: 5;
 }
 .skol61 {
-  background-color: #9b8759;
   grid-row-start: 11;
   grid-column-start: 5;
 
@@ -220,7 +203,6 @@ footer {
   grid-column-end: 7;
 }
 .skol81 {
-  background-color: #85a7eb;
   grid-row-start: 11;
   grid-column-start: 7;
 
@@ -228,7 +210,6 @@ footer {
   grid-column-end: 9;
 }
 .skol84 {
-  background-color: #ec57b9;
   grid-row-start: 13;
   grid-column-start: 1;
 
@@ -236,7 +217,6 @@ footer {
   grid-column-end: 4;
 }
 .skol92 {
-  background-color: #97b5ee;
   grid-row-start: 13;
   grid-column-start: 4;
 
@@ -244,7 +224,6 @@ footer {
   grid-column-end: 6;
 }
 .skol94 {
-  background-color: #ba76cf;
   grid-row-start: 13;
   grid-column-start: 6;
 
