--- a/css/index.css
+++ b/css/index.css
@@ -89,10 +89,9 @@ h5 {
   padding: 20px;
   padding-bottom: 100px;
 }
-/* .grid_2-3 {
-  height: 650px;
+.grid_2-3 {
   background: var(--vena-3, #b0413e);
-} */
+}
 /* Link på padding? */
 
 @media (min-width: 601px) {
@@ -108,6 +107,26 @@ h5 {
     background: var(--vena-3, #b0413e);
   }
   .grid_1-1 {
-    padding: 100px;
+    margin: auto;
+    padding: 10px;
+    gap: 1em;
+  }
+  h5 {
+    font-size: 24px;
+    line-height: 40px;
+  }
+  p {
+    font-size: 24px;
+    padding: 3%;
+  }
+  h2 {
+    font-size: 40px;
+    padding: 3%;
+  }
+  .pil {
+    width: 20%;
+    height: 100%;
+    margin: 10%;
+    padding-left: 40px;
   }
 }
