--- a/css/proces.css
+++ b/css/proces.css
@@ -76,6 +76,8 @@ main {
   .item_2_1 {
     grid-column: 1;
     padding: 10%;
+    width: 1483px;
+    height:989px;
   }
   .item_2_2 {
     grid-column: 2;
@@ -146,6 +148,17 @@ main {
   }
   .farve {
     background-color: #dcd2c9;
+  }
+  .forsidebilde{
+    background-image:url(/imgs/drejebenk.webp);
+    background-color: #f5ede5;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    align-items: center;
+    height: 100vh;
+    margin-bottom: 2em;
   }
   @media only screen and (min-width: 601px) and (max-width: 900px){
     .top{
