--- a/css/producter.css
+++ b/css/producter.css
@@ -81,8 +81,10 @@ img {
   height: 100%;
   object-fit: cover;
 }
+.skaalcontainer {
+}
 
-@media only screen and (min-width: 601px) and (max-width: 900px) {
+@media only screen and (min-width: 900px) {
   .skaalcontainer {
     padding-left: 10%;
     padding-right: 10%;
