--- a/css/index.css
+++ b/css/index.css
@@ -42,7 +42,7 @@ img {
 }
 
 .farve_boks {
-  background-color: #4c403f;
+  background-color: #b0413e;
   color: #f5ede5;
   justify-content: center;
   align-items: center;
@@ -73,16 +73,18 @@ h5 {
   margin: auto;
   transition: 0.5s;
 }
-.pil:hover,
-.pil2:hover {
-  translate: 7px;
-}
 
 .index_bowl {
   margin: auto;
   width: 100%;
   padding-top: 0;
   padding-bottom: 0;
+}
+.link_pil1:hover,
+.link_pil:hover {
+  translate: 7px;
+  transition: 0.5s;
+  animation-fill-mode: both;
 }
 .grid1_1-1 {
   background-color: #9cafba;
@@ -93,7 +95,7 @@ h5 {
   padding-bottom: 100px;
 }
 .grid_2-3 {
-  background: var(--vena-3, #b0413e);
+  background: #dcd2c9;
 }
 /* Link på padding? */
 
@@ -107,7 +109,7 @@ h5 {
   }
   .grid_2-3 {
     flex-shrink: 0;
-    background: var(--vena-3, #b0413e);
+    background: #dcd2c9;
   }
   .grid_1-1 {
     margin: auto;
