--- a/css/producter.css
+++ b/css/producter.css
@@ -9,7 +9,7 @@ footer {
   font-family: lora;
 }
 .h1bilde {
-  background-image: url(/imgs/coverprodukter.webp);
+  background-image: url(/imgs/IMG_4399\ \(1\)-kopi.webp);
   background-color: #f5ede5;
   background-size: cover;
   height: 100vh;
