--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@ h5 {
   animation-fill-mode: both;
 }
 .grid1_1-1 {
-  background-color: #9cafba;
+  background-color: #b0413e;
 }
 .fremgang {
   margin: 5%;
@@ -118,7 +118,7 @@ h5 {
     align-items: center;
   }
   h5 {
-    font-size: 30%px;
+    font-size: 20px;
     line-height: 40px;
   }
   p {
