--- a/css/proces.css
+++ b/css/proces.css
@@ -147,6 +147,17 @@ body {
 .farve {
   background-color: #dcd2c9;
 }
+.forsidebilde{
+    background-image:url(/imgs/drejebenk.webp);
+    background-color: #f5ede5;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    align-items: center;
+    height: 100vh;
+    margin-bottom: 2em;
+  }
 @media only screen and (min-width: 601px) and (max-width: 900px) {
   .top {
     margin-left: 3em;
