--- a/css/proces.css
+++ b/css/proces.css
@@ -84,11 +84,10 @@ body {
   padding: 10%;
 }
 .item_2_2 {
-  grid-column: 2;
-  padding-top: 20%;
-  padding-left: 10%;
-  padding-right: 20%;
-  padding-bottom: 22%;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .flex_c1 {
   padding-left: 5%;
@@ -146,7 +145,7 @@ body {
   font-size: 1.25rem;
   line-height: 2.125rem;
 }
-.over {
+.item_2_2 .over {
   padding-left: 2%;
   color: #b0413e;
 }
@@ -154,15 +153,18 @@ body {
   background-color: #dcd2c9;
 }
 .forsidebilde {
-  background-image: url(/imgs/drejebenk.webp);
+  background-image: url(/imgs/process1.webp);
   background-color: #f5ede5;
   background-size: cover;
-  height: 100vh;
+  height: 60vh;
   width: 100%;
   background-repeat: no-repeat;
-  align-items: center;
-  height: 100vh;
+  color: white;
   margin-bottom: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 @media only screen and (min-width: 601px) and (max-width: 900px) {
   .top {
