--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
 }
 .headerul {
   font-family: lora;
+  list-style: none;
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(4, minmax(0, 1fr));
