--- a/css/index.css
+++ b/css/index.css
@@ -49,12 +49,12 @@ img {
 }
 p {
   font-family: lora;
-  font-size: 30px;
+  font-size: 20px;
   line-height: 40px;
 }
 h2 {
   font-family: lora;
-  font-size: 45px;
+  font-size: 30px;
 }
 h5 {
   font-family: montserratitalic;
@@ -67,11 +67,21 @@ h5 {
   margin: 5%;
   padding: 20px;
 }
-.pil,
+.pil {
+  width: 69.007px;
+  margin: auto;
+  transition: 0.5s;
+}
 .pil2 {
   width: 69.007px;
   margin: auto;
   transition: 0.5s;
+  from {
+    filter: brightness(120%);
+  }
+  to {
+    filter: brightness(130%);
+  }
 }
 
 .index_bowl {
@@ -85,6 +95,7 @@ h5 {
   translate: 7px;
   transition: 0.5s;
   animation-fill-mode: both;
+  filter: brightness(200%);
 }
 .grid1_1-1 {
   background-color: #b0413e;
@@ -93,6 +104,7 @@ h5 {
   margin: 5%;
   padding: 20px;
   padding-bottom: 100px;
+  color: #dcd2c9;
 }
 .grid_2-3 {
   background: #dcd2c9;
@@ -139,6 +151,7 @@ h5 {
     width: 10%;
     height: 100%;
     margin: 5%;
+    filter: brightness(170%);
   }
   .fremgang {
     display: flex;
